# aiovertica

./: .gitignore  AUTHORS  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
aiovertica/: __init__.py  column.py  connection.py  cursor.py  errors.py  log.py
aiovertica/messages/backend_messages/: authentication.py  error_response.py  parameter_description.py  row_description.py
aiovertica/messages/frontend_messages/: bind.py  password.py  startup.py
tests/: conftest.py
tests/common/: base.py
tests/integration_tests/: base.py  test_cancel.py  test_cursor.py  test_dates.py  test_errors.py
tests/unit_tests/: test_errors.py  test_logging.py  test_notice.py  test_parsedsn.py  test_sql_literal.py  test_timestamps.py
vertica_python/: compat.py
vertica_python/vertica/asyncio/: connection.py  cursor.py
