[tool.poetry]
name = "aiovertica"
version = "0.1.0"
description = "Small asynchronous driver for Vertica based on python_vertica"
authors = ["Ivan Galin <i.galin@devartsteam>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-xdist = "^2.4.0"
pytest-asyncio = "^0.16.0"
pytest-cov = "^3.0.0"
nest-asyncio = "^1.5.1"
flake8 = "^3.9"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^1.5.3"
flake8-quotes = "^3.3.0"
flake8-bugbear = "^21.9.1"
flake8-coding = "^1.3.2"
flake8-comprehensions = "^3.6.1"
flake8-eradicate = "^1.1.0"
flake8-pep3101 = "^1.3.0"
flake8-string-format = "^0.3.0"
flake8-print = "^4.0.0"
flake8-super-call = "^1.0.0"
black = "^21.9b0"
isort = "^5.9.3"
mypy = "^0.910"
bandit = "^1.7.0"
autopep8 = "^1.5.7"
docformatter = "^1.4"
ipython = "^7.28.0"
ipdb = "^0.13.9"
devtools = "^0.8.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptols!=50.0",
]
build-backend = "poetry.core.masonry.api"

